feat(backend): replicate complete reference backend code with com.noir.job package renaming